Fixed issue with notification icon showing over other other content due to Z-index being to high

--- a/src/2-quarks/helpers/display.scss
+++ b/src/2-quarks/helpers/display.scss
@@ -53,8 +53,8 @@
 }
 
 .sp-full-width {
-  box-sizing: border-box;
-  width: 100%;
+  box-sizing: border-box !important;
+  width: 100% !important;
 }
 
 .sp-scroll-vertical {
